# bees-bears

./: .env.template  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: auth.py  customer.py
app/core/: config.py  deps.py  exception_handlers.py  security.py
app/database/: database.py
app/models/: customer.py  user.py
app/repositories/: base.py  customer.py  user.py
app/schemas/: auth.py  customer.py
app/services/: auth.py  customer.py
tests/: test_auth_service.py  test_customer_service.py
